# gaslab

./: .gitignore  README.md  STATIC_EXPORT.md  Untitled-1.ipynb  app.py  pyproject.toml  ui_tooltips.py
.github/workflows/: deploy-pages.yml
docs/: index.html
notebooks/: 00_state_basics.ipynb  00_temp.ipynb  01_getting_started.ipynb  02_de_laval.ipynb  03_flow_turning.ipynb  04_wave_interactions.ipynb
scripts/: prepare_static_export.py  publish.sh  pyodide_requirements.txt
src/gaslab/: __init__.py  defaults.py  plotting.py  relations.py  state.py  ui_tooltips.py
