[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gaslab"
version = "0.1.0"
description = "Educational compressible flow laboratory"
authors = [
    {name = "Tim Colonius"}
]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "panel"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
